fix modals on mobile

--- a/app/styles/au/_au-components.scss
+++ b/app/styles/au/_au-components.scss
@@ -755,3 +755,8 @@ $au-label-color: var(--au-gray-700);
     min-width: 354px;
   }
 }
+
+// Adjust width of modals on mobile
+.auk-modal {
+    max-width: calc(100% - 2rem);
+}
